--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 			<p class="sample-text">
 				Pour accéder à l’Application, vous devez posséder un terminal mobile et un accès au réseau.				Internet.
 				L’Application est téléchargeable gratuitement depuis la plateforme "Google Play" sur les terminaux mobiles disposant du système d’exploitation Android® Lollipop (API 21) minimum.
-				La version du logiciel de l’Application peut être mise à jour de temps à autre pour ajouter de nouvelles fonctions et de nouveaux services	
+				La version du logiciel de l’Application peut être mise à jour de temps à autre pour ajouter de nouvelles fonctions et de nouveaux services.	
 			</p>
-			<h3 class="text-heading">ACCES A L’APPLICATION</h3>
+			<h3 class="text-heading">DROITS</h3>
 			<p class="sample-text">
 				Fabrice EBROTTIE vous concède un droit personnel d’utilisation de l’Application et de son contenu. Ce droit est accordé à titre non exclusif, révocable, non cessible, non transférable,
 				mondial et gratuit et pour la seule utilisation de l’Application, à l’exclusion de toute autre finalité. Il est strictement interdit d’accéder et/ou d’utiliser et/ou de tenter d’accéder ou d’utiliser les
@@ -127,14 +127,67 @@
 			<p class="sample-text">
 				Aucune donnée personnelle n'est demandée, ni utilisée à votre insue.	
 			</p>
-			<h3 class="text-heading">DONNÉES PERSONNELLES</h3>
-			<p class="sample-text">
-				Aucune donnée personnelle n'est demandée, ni utilisée à votre insue.	
-			</p>
+			
+			
 
 		</div>
 	</section>
 	<!-- End Sample Area -->
+	<!-- Slider Area Start-->
+
+	<div class="services-area">
+		<div class="container">
+			<!-- Section-tittle -->
+			<div class="row d-flex justify-content-center">
+				<div class="col-lg-8">
+					<div class="section-tittle text-center mb-80">
+						<h2>Conditions and terms<h2>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Slider Area End-->
+	<section class="sample-text-area">
+		<div class="container box_1170">
+			<h3 class="text-heading">PURPOSE OF THE GENERAL CONDITIONS OF USE</h3>
+			<p class="sample-text">
+				The purpose of these general conditions of use (hereinafter "GCU") is to define
+				the rules of use of the mobile application <u>"iMeteo"</u> (hereinafter "the Application") published
+				by <i>Fabrice EBROTTIE</i>, Independent Developer, responding to the email address <b>f.ebrottie@gmail.com</b>.
+				By installing the Application on your device and/or accessing the Application, you accept
+				without reservation the entirety of these T&Cs and you undertake to respect the obligations to your
+				charge. In the event that you do not accept the T&Cs or have reservations, please do not
+				use the App.
+				
+			</p>
+			<h3 class="text-heading">PURPOSE AND FUNCTIONALITIES OF THE APPLICATION</h3>
+			<p class="sample-text">
+				The Application allows you to consult the weather forecast for any city in the world, via a form field containing the name of the city in question.
+				The internet connection is necessary for the proper functioning of the Application.	
+			</p>
+			<h3 class="text-heading">ACCESS TO THE APPLICATION</h3>
+			<p class="sample-text">
+				To access the Application, you must have a mobile terminal and network access. Internet.
+				The Application can be downloaded free of charge from the "Google Play" platform on mobile devices with the Android® Lollipop operating system (API 21) minimum.
+				The software version of the Application may be updated from time to time to add new functions and services
+			</p>
+			<h3 class="text-heading">RIGHTS</h3>
+			<p class="sample-text">
+				Fabrice EBROTTIE grants you a personal right to use the Application and its content. This right is granted on a non-exclusive, revocable, non-assignable, non-transferable basis,
+				worldwide and free of charge and for the sole use of the Application, to the exclusion of any other purpose. It is strictly prohibited to access and/or use and/or attempt to access or use the
+				source codes or objects of the Application.
+				You do not acquire any intellectual property rights over the Application or its content, nor any other right than those conferred by these T&Cs.
+			</p>
+			<h3 class="text-heading">PERSONAL DATA</h3>
+			<p class="sample-text">
+				No personal data is requested or used without your knowledge.	
+			</p>
+			
+			
+
+		</div>
+	</section>
 
 	<!-- Start Button -->
 	<section class="button-area">
